# libs/api/contracts/src/index.ts
@@ -1,4 +1,5 @@
 export * from './lib/api-contracts.module';
+export * from './lib/approval/approval.dto';
 export * from './lib/auth/user.dto';
 export * from './lib/project/project.dto';
 export * from './lib/contract/contract.dto';
